--- a/.github/workflows/milestone-release.yml
+++ b/.github/workflows/milestone-release.yml
@@ -13,7 +13,7 @@ jobs:
       pull-requests: read
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v4
         with:
           fetch-depth: 0
           ref: main # Checkout the main branch
@@ -28,7 +28,7 @@ jobs:
 
       - name: Get Closed Issues
         id: issues
-        uses: actions/github-script@v7
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
         with:
           script: |
             const milestone_number = context.payload.milestone.number;
@@ -49,6 +49,12 @@ jobs:
 
             await core.setOutput('changelog', releaseNotes.data.body);
 
+      - name: Update Solution.props with milestone version
+        uses: ./.github/actions/version-tools
+        with:
+          task: update-version
+          new-version: ${{ github.event.milestone.title }}
+
       - name: Check Prerelease Status
         id: prerelease
         run: |
@@ -60,12 +66,12 @@ jobs:
           fi
 
       - name: Create Release
-        uses: softprops/action-gh-release@v2.2.1
+        uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.MILESTONE_TITLE }}
-          name: Release ${{ env.MILESTONE_TITLE }}
+          tag_name: ${{ github.event.milestone.title }}
+          name: Release ${{ github.event.milestone.title }}
           body: |
             ${{ env.MILESTONE_DESCRIPTION }}
             
