--- a/.github/actions/version-tools/action.yml
+++ b/.github/actions/version-tools/action.yml
@@ -99,49 +99,92 @@ runs:
         fi
         
         # Format version for shields.io by encoding special characters
-        ENCODED_VERSION=$(echo "$VERSION" | sed 's/-/--/g')
+        ENCODED_VERSION=$(echo "$VERSION" | sed 's/-/--/g' | sed 's/\./%2E/g')
         
-        # Determine color based on version
+        # Determine color and status based on version
         if [[ $VERSION == *"-dev"* ]]; then
           COLOR="blue"
-          LABEL="version (dev)"
+          STATUS="Development"
         elif [[ $VERSION == *"-alpha"* ]]; then
           COLOR="orange"
-          LABEL="version (alpha)"
+          STATUS="Alpha"
         elif [[ $VERSION == *"-beta"* ]]; then
           COLOR="yellow"
-          LABEL="version (beta)"
+          STATUS="Beta"
         elif [[ $VERSION == *"-rc"* ]]; then
           COLOR="yellowgreen"
-          LABEL="version (rc)"
+          STATUS="Release Candidate"
         else
           COLOR="brightgreen"
-          LABEL="version"
+          STATUS="Stable"
         fi
         
-        # Create new badge URL
-        NEW_BADGE_URL="https://img.shields.io/badge/$LABEL-$ENCODED_VERSION-$COLOR"
+        # Create new badge URLs
+        VERSION_BADGE_URL="https://img.shields.io/badge/version-$ENCODED_VERSION-$COLOR"
+        STATUS_BADGE_URL="https://img.shields.io/badge/status-$STATUS-$COLOR"
         
-        # Update README.md with new badge
+        # Update README.md with new badges
         if [[ -f "README.md" ]]; then
-          # Check if README already has a version badge
-          if grep -q "img.shields.io/badge/version" README.md || grep -q "img.shields.io/badge/$LABEL" README.md; then
-            # Replace existing badge
-            sed -i "s|https://img.shields.io/badge/[^)]*|$NEW_BADGE_URL|" README.md
-            echo "Updated existing version badge in README.md"
+          BADGES_CHANGED=false
+          
+          # Update version badge
+          if grep -q "\[\!\[Version\]\]" README.md; then
+            echo "Found existing version badge, updating it"
+            # Use perl for more reliable regex replacement
+            perl -i -pe 's|\[\!\[Version\]\]\(https://img\.shields\.io/badge/version[^)]*\)|\[\!\[Version\]\]\('$VERSION_BADGE_URL'\)|g' README.md
+            if [ $? -eq 0 ]; then
+              echo "Updated existing version badge in README.md"
+              BADGES_CHANGED=true
+            else
+              echo "Failed to update version badge"
+            fi
           else
+            echo "No version badge found, adding one"
             # Add new badge at the top of the file, after the title
-            sed -i "0,/^# /s/^# \(.*\)/# \1\n\n![Version]($NEW_BADGE_URL)/" README.md
-            echo "Added new version badge to README.md"
+            sed -i "0,/^# /s/^# \(.*\)/# \1\n\n[![Version]($VERSION_BADGE_URL)](https:\/\/github.com\/architects-toolkit\/SmartHopper\/releases)/" README.md
+            if [ $? -eq 0 ]; then
+              echo "Added new version badge to README.md"
+              BADGES_CHANGED=true
+            else
+              echo "Failed to add version badge"
+            fi
+          fi
+          
+          # Update status badge
+          if grep -q "\[\!\[Status\]\]" README.md; then
+            echo "Found existing status badge, updating it"
+            # Use perl for more reliable regex replacement
+            perl -i -pe 's|\[\!\[Status\]\]\(https://img\.shields\.io/badge/status[^)]*\)|\[\!\[Status\]\]\('$STATUS_BADGE_URL'\)|g' README.md
+            if [ $? -eq 0 ]; then
+              echo "Updated existing status badge in README.md"
+              BADGES_CHANGED=true
+            else
+              echo "Failed to update status badge"
+            fi
+          else
+            echo "No status badge found, adding one after version badge"
+            # Add status badge after version badge if it exists
+            if grep -q "\[\!\[Version\]\]" README.md; then
+              perl -i -pe 's|(\[\!\[Version\]\].*\n)|$1\n[![Status]('$STATUS_BADGE_URL')](https:\/\/github.com\/architects-toolkit\/SmartHopper\/releases)|' README.md
+            else
+              # Add at the top if no version badge
+              sed -i "0,/^# /s/^# \(.*\)/# \1\n\n[![Status]($STATUS_BADGE_URL)](https:\/\/github.com\/architects-toolkit\/SmartHopper\/releases)/" README.md
+            fi
+            if [ $? -eq 0 ]; then
+              echo "Added new status badge to README.md"
+              BADGES_CHANGED=true
+            else
+              echo "Failed to add status badge"
+            fi
           fi
           
           # Check if badges were changed
-          if git diff --exit-code README.md; then
-            echo "No changes to README.md badges"
-            echo "badges-changed=false" >> $GITHUB_OUTPUT
-          else
+          if [ "$BADGES_CHANGED" = true ]; then
             echo "README.md badges were updated"
             echo "badges-changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "No changes to README.md badges"
+            echo "badges-changed=false" >> $GITHUB_OUTPUT
           fi
         else
           echo "README.md not found, skipping badge update"
