--- a/.github/workflows/update-dev-version-date.yml
+++ b/.github/workflows/update-dev-version-date.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v4
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
