--- a/.github/workflows/security-patch-release.yml
+++ b/.github/workflows/security-patch-release.yml
@@ -16,21 +16,26 @@ on:
 permissions:
   contents: write
   issues: read
-  pull-requests: read
+  pull-requests: write
 
 jobs:
   create-security-patch:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout main branch
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           fetch-depth: 0
           ref: main
 
+      - name: Configure Git
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+
       - name: Get latest release version
         id: latest-release
-        uses: actions/github-script@v7
+        uses: actions/github-script@v7.0.1
         with:
           script: |
             try {
@@ -67,12 +72,27 @@ jobs:
           version: ${{ steps.latest-release.outputs.result || steps.current-version.outputs.version }}
           increment: patch
 
+      - name: Set branch name
+        id: set-branch
+        run: |
+          SECURITY_BRANCH="security/patch-${{ steps.calculate-version.outputs.new-version }}"
+          echo "security_branch=$SECURITY_BRANCH" >> $GITHUB_OUTPUT
+
+      - name: Create new branch
+        run: |
+          git checkout -b ${{ steps.set-branch.outputs.security_branch }}
+
       - name: Update Solution.props with new version
         uses: ./.github/actions/version-tools
         with:
           task: update-version
           new-version: ${{ steps.calculate-version.outputs.new-version }}
-          update-badge: true
+
+      - name: Update badges in README.md
+        id: update-badge
+        uses: ./.github/actions/version-tools
+        with:
+          task: update-badge
 
       - name: Update CHANGELOG.md
         id: update-changelog
@@ -83,21 +103,23 @@ jobs:
           security-description: ${{ github.event.inputs.description }}
 
       - name: Commit changes
+        id: commit-changes
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add Solution.props CHANGELOG.md
+          git add Solution.props README.md CHANGELOG.md
           
           # Check if there are changes to commit
           if git diff --staged --quiet; then
-            echo "No changes to commit, continuing with next steps"
+            echo "No changes to commit, skipping PR creation"
+            echo "changes_made=false" >> $GITHUB_OUTPUT
           else
-            git commit -m "chore: bump version to ${{ steps.calculate-version.outputs.new-version }} for security patch"
+            git commit -m "security: bump version to ${{ steps.calculate-version.outputs.new-version }} for security patch"
+            git push origin ${{ steps.set-branch.outputs.security_branch }}
+            echo "changes_made=true" >> $GITHUB_OUTPUT
           fi
 
       - name: Check milestones for version collision
         id: check-milestones
-        uses: actions/github-script@v7
+        uses: actions/github-script@v7.0.1
         with:
           script: |
             const milestones = await github.rest.issues.listMilestones({
@@ -205,8 +227,8 @@ jobs:
             echo "DEV_COLLISION=false" >> $GITHUB_OUTPUT
           fi
           
-          # Return to main branch
-          git checkout main
+          # Return to security branch
+          git checkout ${{ steps.set-branch.outputs.security_branch }}
 
       - name: Update dev branch if version collision
         if: steps.check-dev.outputs.DEV_COLLISION == 'true'
@@ -227,22 +249,72 @@ jobs:
           # Push changes to dev branch
           git push origin dev
           
-          # Return to main branch
-          git checkout main
+          # Return to security branch
+          git checkout ${{ steps.set-branch.outputs.security_branch }}
 
-      - name: Push changes to main
-        run: |
-          # Check if there are changes to push
-          if git diff --quiet origin/main; then
-            echo "No changes to push, continuing with next steps"
-          else
-            git push origin main
-          fi
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
+      - name: Create PR for security patch
+        if: steps.commit-changes.outputs.changes_made == 'true'
+        uses: actions/github-script@v7.0.1
         with:
-          tag_name: ${{ steps.calculate-version.outputs.new-version }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const prTitle = `security: release security patch v${{ steps.calculate-version.outputs.new-version }}`;
+            const prBody = `## Security Patch Release v${{ steps.calculate-version.outputs.new-version }}
+            
+            ### Security Fix
+            
+            - ${{ github.event.inputs.description }}
+            
+            This PR contains a security patch release that addresses critical security issues.
+            
+            ### Changes
+            
+            - Bumped version to ${{ steps.calculate-version.outputs.new-version }}
+            - Updated badges in README.md
+            ${${{ github.event.inputs.update_changelog }} ? '- Updated CHANGELOG.md with security fix details' : ''}
+            
+            ${steps.check-milestones.outputs.result && steps.check-milestones.outputs.result.updatedMilestones.length > 0 ? '### Updated Milestones\n\n' + steps.check-milestones.outputs.result.updatedMilestones.map(m => `- ${m.from} → ${m.to}`).join('\n') : ''}
+            ${steps.check-dev.outputs.DEV_COLLISION == 'true' ? `\n### Dev Branch Update\n\nThe dev branch version has been updated from ${steps.check-dev.outputs.DEV_VERSION} to ${steps.check-dev.outputs.DEV_NEW_VERSION} to avoid version collision.` : ''}`;
+            
+            try {
+              const pr = await github.rest.pulls.create({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                title: prTitle,
+                body: prBody,
+                head: '${{ steps.set-branch.outputs.security_branch }}',
+                base: 'main'
+              });
+              
+              console.log(`PR created: ${pr.data.html_url}`);
+              
+              // Add security label if it exists
+              try {
+                await github.rest.issues.addLabels({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: pr.data.number,
+                  labels: ['security']
+                });
+              } catch (error) {
+                console.log('Could not add security label, it may not exist');
+              }
+              
+              return {
+                pr_number: pr.data.number,
+                pr_url: pr.data.html_url
+              };
+            } catch (error) {
+              console.log('Error creating PR:');
+              console.log(error);
+              return null;
+            }
+
+      - name: Create GitHub Release Draft
+        if: steps.commit-changes.outputs.changes_made == 'true'
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ steps.calculate-version.outputs.new-version }}
           name: Security Release ${{ steps.calculate-version.outputs.new-version }}
           body: |
             ## Security Release ${{ steps.calculate-version.outputs.new-version }}
@@ -254,4 +326,4 @@ jobs:
             This is a security patch release that addresses critical security issues.
           draft: true
           prerelease: false
-          target_commitish: main
+          target_commitish: ${{ steps.set-branch.outputs.security_branch }}
