--- a/.github/workflows/security-release-after-merge.yml
+++ b/.github/workflows/security-release-after-merge.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ steps.extract-version.outputs.version }}
+          tag_name: ${{ steps.extract-version.outputs.version }}
           name: Security Release ${{ steps.extract-version.outputs.version }}
           body: ${{ github.event.pull_request.body }}
           draft: true
