--- a/.github/workflows/security-patch-release.yml
+++ b/.github/workflows/security-patch-release.yml
@@ -114,13 +114,12 @@ jobs:
         with:
           task: update-badge
 
-      - name: Update CHANGELOG.md
-        if: ${{ github.event.inputs.update_changelog == 'true' }}
+      - name: Update CHANGELOG.md with version changes
         uses: ./.github/actions/version-tools/changelog-updater
         with:
           version: ${{ steps.calculate-version.outputs.new-version }}
           security-fix: true
-          security-description: ${{ github.event.inputs.description }}
+          security-description: ${{ github.event.inputs.update_changelog == 'true' && github.event.inputs.description || '' }}
 
       - name: Commit and push changes
         id: commit-changes
